--- a/js/util/calendar.html
+++ b/js/util/calendar.html
@@ -13,9 +13,9 @@
 }
 
 .modal-close {
-    width: 20px;
-    height: 20px;
-    background-image: url(../img/close.svg);
+    width: 30px;
+    height: 30px;
+    background-image: url(../img/icon/close_black.svg);
     background-size: cover;
     background-repeat: no-repeat;
     display: inline-block;
