--- a/js/pages/order/order.html
+++ b/js/pages/order/order.html
@@ -186,6 +186,12 @@ input[type=checkbox] {
                 <div class="hiddenbox">
                     <div class="check-icon" ms-class-1="unchecked:payType!=6" ms-class-2="checked:payType==6" style="position: absolute; right: 5px;"></div>
                 </div>
+                <span class="bs-text-normal bs-text-black">钱包支付</span>
+            </div>
+            <div ms-click="selectPayType(8)" style="margin-bottom: 10px;">
+                <div class="hiddenbox">
+                    <div class="check-icon" ms-class-1="unchecked:payType!=8" ms-class-2="checked:payType==8" style="position: absolute; right: 5px;"></div>
+                </div>
                 <span class="bs-text-normal bs-text-black">时币支付</span>
             </div>
             <!-- <div ms-if="isweixin" ms-click="selectPayType(2)" style="margin-bottom: 10px;">
