--- a/js/pages/service/popMoreService.html
+++ b/js/pages/service/popMoreService.html
@@ -42,9 +42,9 @@
         您还需要
     </div>
     <div>
-        <textarea class="bs-text-normal" style="height: 100px;" placeholder="在此输入"></textarea>
+        <textarea class="bs-text-normal" style="height: 100px;" ms-duplex="addContent" placeholder="在此输入"></textarea>
     </div>
-    <div class="footer-l" ms-on-tap="closePop">
+    <div class="footer-l" ms-on-tap="addService">
         提交
     </div>
     <div class="footer-r" ms-on-tap="closePop">
