--- a/js/pages/service/process.html
+++ b/js/pages/service/process.html
@@ -173,11 +173,11 @@
             <img id="r5" src="../img/icon/service-user.svg" class="item-img-r" style="display: none;">
         </div>
     </div> -->
-    <div class="oneLine" onclick="javascript:location.href='ready.html';">
+    <div class="oneLine">
         <div>
             <img id="lEnd" src="../img/icon/service-staff.svg" class="item-img" style="display: none;">
         </div>
-        <div id="end" class="question">
+        <div id="end" class="question" ms-on-tap="goNextStep">
             <span class="askEnd" style="margin-left: 20px;"></span>
         </div>
     </div>
