--- a/js/pages/service/ready.html
+++ b/js/pages/service/ready.html
@@ -47,10 +47,24 @@
     height: 120px;
     margin: 0 auto;
     text-align: center;
-    line-height: 120px;
+    line-height: 100px;
     border-radius: 100px;
     font-size: 20px;
-    box-shadow: 0 0 3px 3px #ccc;
+    color: #fdd942;
+    border: 10px solid;
+    /*box-shadow: 0 0 3px 3px #ccc;*/
+}
+
+.cirque-disabled {
+    width: 120px;
+    height: 120px;
+    margin: 0 auto;
+    text-align: center;
+    line-height: 100px;
+    border-radius: 100px;
+    font-size: 20px;
+    border: 10px solid;
+    border-color: rgba(255,255,255,.5);
 }
 
 .content-prompt {
@@ -135,13 +149,33 @@ div .mui-popup-buttons .mui-popup-button {
     justify-content: flex-start;
     align-items: center;
     height: 48px;
-    padding-left: 24px;
+    padding: 5px 0 0 24px;
 }
 
 .header-content {
     display: flex;
     justify-content: flex-start;
     margin-right: 15px;
+}
+
+.header-nav {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height: 60px;
+    margin-top: 8px;
+    padding: 5px 0 0 24px;
+    background-color: white;
+}
+
+.header-nav:active {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height: 60px;
+    margin-top: 8px;
+    padding: 5px 0 0 24px;
+    background-color: #eee;
 }
 </style>
 <div class="" ms-controller="serviceReady">
@@ -162,9 +196,28 @@ div .mui-popup-buttons .mui-popup-button {
             </div>
         </div>
     </div>
-    <div class="mui-content gradient">
+    <div class="bs-text-smaller bs-text-444 header-nav"  ms-on-tap="openNav">
+        <div class="bs-text-normal header-content">
+            <img src="../img/icon/mapNavigation.svg" style="margin-right: 8px;">
+        </div>
+        <div class="header-content bs-text-normal">
+            导航
+        </div>
+    </div>
+    <div class="mui-content gradient" ms-if="isCirqueShow==0">
         <div class="device-c mui-col-sm-12">
-            <div class="cirque bs-bg-444" ms-on-tap="goTem">
+            <div class="cirque" ms-on-tap="goTem">
+                {{temperature}}
+            </div>
+            <img src="../img/icon/right-arrow.svg" class="arrow" ms-on-tap="goOpendoor">
+            <div class="bs-text-smaller prompt bs-text-444">
+                {{timePrompt}}
+            </div>
+        </div>
+    </div>
+    <div class="mui-content gradient" ms-if="isCirqueShow==1">
+        <div class="device-c mui-col-sm-12">
+            <div class="bs-bg-gray bs-text-white cirque-disabled">
                 {{temperature}}
             </div>
             <img src="../img/icon/right-arrow.svg" class="arrow" ms-on-tap="goOpendoor">
@@ -177,22 +230,22 @@ div .mui-popup-buttons .mui-popup-button {
         <div class="content-prompt">
             亲爱的xxx，根据您的入住信息，KKL已免费为您准备了一下服务：
         </div>
-        <div class="content-infor bs-text-16" ms-repeat="data">
-            {{el.information}};
+        <div class="content-infor bs-text-16" ms-repeat="serviceList">
+            {{el.content}};
         </div>
-        <div class="bs-text-16 bs-text-eca022 " style="margin-top: 16px;" ms-on-tap="addService">`
+        <div class="bs-text-16 bs-text-eca022 " style="margin-top: 16px;" ms-on-tap="addService">
             您需要的更多的服务
         </div>
     </div>
-    <div style="height: 308px;margin-top:16px;padding-top:18px;background-color: white;">
+    <!-- <div style="height: 308px;margin-top:16px;padding-top:18px;background-color: white;">
         <div style="margin: 0 30px 18px;color: #444;font-size: 18px;">
             <img src="../img/icon/mapNavigation.svg" style="position: relative;top: 5px;margin-right: 8px;">或许您还需要导航
         </div>
         <div ms-on-tap="openNav">
             <img src="../img/service-hotelPlace.png" style="height: 240px;width: 100vw;">
         </div>
-    </div>
-    <div style="height: 54px;">
+    </div> -->
+    <div class="bs-bg-white" style="height: 64px;">
     </div>
     <div class="footer-nav">
         <div class="footer-content" ms-on-tap="goIndex">
