--- a/js/pages/index/searchLocation.html
+++ b/js/pages/index/searchLocation.html
@@ -11,8 +11,9 @@
     height: 35px;
     text-align: center;
     display: inline-block;
-    margin: 0 0 16px 24px;
+    margin-bottom: 16px;
     padding: 5px 13px;
+    margin-right: 8px;
 }
 
 .searchlocation-searchhistory{
@@ -107,12 +108,12 @@ hr {
             </div>
         </div>
         <section style="display: flex;justify-content: baseline;align-items: center;padding: 20px 24px;">
-            <div><img src="" style="width: 16px;height: 16px;"></div>
+            <img src="../img/icon/icon-geo.svg" style="width: 16px;height: 16px;">
             <div style="font-size: 14px;padding-left: 16px;">定位当前位置</div>
         </section>
         <section style="text-align: left;">
             <div class="bs-text-small bs-text-gray" style="font-size: 12px;margin-bottom: 24px;padding-left: 24px;">热门酒店推荐</div>
-            <div>
+            <div style="display: flex;flex-wrap: wrap;justify-content: flex-start;padding: 0 24px;">
                 <div class="bs-text-small bs-text-black hot-hotel-recommend">上海迪斯尼店</div>
                 <div class="bs-text-small bs-text-black hot-hotel-recommend">惠南店</div>
                 <div class="bs-text-small bs-text-black hot-hotel-recommend">野生动物园店</div>
@@ -128,11 +129,11 @@ hr {
             <div>
                 <div class="bs-text-small bs-text-balck searchlocation-searchhistory">
                     <div class="bs-text-normal">上海迪斯尼店</div>
-                    <div style="height: 24px;"><img src="../img/delete.png" style="width: 24px;height: 24px;"></div>
+                    <div style="height: 24px;"><img src="../img/icon/close_black.svg" style="width: 14px;height: 14px;"></div>
                 </div>
                 <div class="bs-text-small bs-text-balck searchlocation-searchhistory">
                     <div class="bs-text-normal">上海迪斯尼店</div>
-                    <div style="height: 24px;"><img src="../img/delete.png" style="width: 24px;height: 24px;"></div>
+                    <div style="height: 24px;"><img src="../img/icon/close_black.svg" style="width: 14px;height: 14px;"></div>
                 </div>
             </div>
         </section>
