--- a/js/pages/checkout/checkOut.html
+++ b/js/pages/checkout/checkOut.html
@@ -1,17 +1,17 @@
 <style>
+section {
+    background-color: #fff;
+}
+
 .save-button {
     padding: 0;
     margin-right: 5px;
     margin-top: 5px;
 }
 
-.back-color {
-    background-color: #fff;
-}
-
 .comment {
     font-size: 0.875rem;
-    height: 205px;
+    height: 140px;
     padding: 0;
     border: 0px;
     margin-bottom: 0px;
@@ -32,18 +32,17 @@
     padding: 5.5% 30px 0 0;
 }
 
-.titl-bold {
-    font-weight: bold;
-}
-
 .evaluation-botton {
     text-align: center;
-    background-color: #169488;
+    background-color: #444;
     color: #FFFFFF;
-    height: 48px;
-    margin-top: 5px;
-    line-height: 45px;
+    height: 36px;
+    margin-top: 12px;
+    margin-bottom: 20px;
+    line-height: 36px;
     font-weight: bold;
+    width: 40vw;
+    border-radius:5px;
 }
 
 .footer-nav {
@@ -73,42 +72,63 @@
     font-size: 8px;
 }
 </style>
-<div ms-controller="checkOut">
-    <div class="back-color">
-        <div style="display: flex;justify-content: space-between;">
-            <div class="bs-text-444 title-margin1 titl-bold" style="font-size: 20px;">您的健康指数报告</div>
-            <div class="title-margin2 titl-bold bs-text-normal" style="color: #169488;" ms-on-tap="send">保存&分享</div>
+<div ms-controller="checkOut" class="bs-text-444">
+    
+    <section style="padding-top: 10px;padding-bottom: 28px;">
+        <div class="title-margin1 bs-text-444 bs-text-bolder" style="font-size: 20px;">
+            获得{{tb}}时币 可抵{{round(tb*tbRate)}}元
         </div>
-        <div class="back-color bs-text-normal title-margin1" style="color: #444444;font-family: '微软雅黑';">{{nowDate}}</div>
-    </div>
-    <div class="back-color">
+        <div class="title-margin1 bs-text-smaller">
+            此次入住提前{{tbTime}}小时退房，获得节能奖励{{tb}}时币，下次入住可抵用{{round(tb*tbRate)}}元。
+        </div>
+
+        <div class="title-margin1 bs-text-smaller">
+            可以在“我的时币”查看到账情况。
+            <br>
+            感谢您对本宿环保公益的支持。
+        </div>
+    </section>
+
+    <section style="margin-top: 8px;padding-top: 26px;">
+        <div style="display: flex;justify-content: space-between;">
+            <div class="bs-text-444 title-margin1 bs-text-bolder" style="font-size: 20px;">您的健康指数报告</div>
+            <div class="title-margin2 bs-text-bolder bs-text-normal bs-text-fdd942" ms-on-tap="send">保存&分享</div>
+        </div>
+        <div class="back-color bs-text-normal title-margin1">{{nowDate}}</div>
+
         <div style="padding: 5px 0 5px 0;">
             <div class="bs-text-large" ms-repeat="list">
-                <div class="title-margin1 titl-bold" style="font-family: '微软雅黑';font-size: 18px;color: #444444;">{{el.name}}</div>
+                <div class="title-margin1 bs-text-bolder" style="font-size: 18px;">{{el.name}}</div>
                 <div style="margin-top: 10px;display: flex;justify-content: space-between;margin-left: 30px;margin-right: 30px;">
-                    <div class="bs-text-normal" ms-repeat="el.typeList" style="color: #444444;">{{el.typeName}}:{{el.number}}</div>
+                    <div class="bs-text-normal" ms-repeat="el.typeList">{{el.typeName}}: {{el.number}}</div>
                 </div>
-                <div class="title-margin1 bs-text-smaller" style="margin-top: 8px;color: #444444;font-family: '微软雅黑';">本宿建议：{{el.suggest}}</div>
-                <div style="border-top: 1px solid #AAAAAA;border-top-color:#F2F2F2; margin-top: 15px;margin-left: 20px;margin-right: 20px;"></div>
+                <div class="title-margin1 bs-text-smaller" style="margin-top: 8px;">D&K建议：{{el.suggest}}</div>
+                <div style="border-top: 1px solid #aaa;border-top-color:#F2F2F2; margin-top: 15px;margin-left: 20px;margin-right: 20px;"></div>
             </div>
             <div>
-                <div class="title-margin1 titl-bold" style="font-style: 20px;color: #444444;font-family: '微软雅黑';">D&K健康建议 </div>
-                <div class="title-margin1" style="font-size: 14px;color: #444444;font-family: '微软雅黑';margin-bottom: 28px;">{{remarks}}</div>
+                <div class="title-margin1 bs-text-bolder" style="font-style: 20px;">D&K健康建议 </div>
+                <div class="title-margin1" style="font-size: 14px;margin-bottom: 28px;">{{remarks}}</div>
                 <img style="position: relative;top: -200px;float: right;right: 30px;" src="/img/qietu-zhang.png" width="100px" height="83px" />
             </div>
         </div>
-    </div>
-    <div style="margin-top: 16px;" class="back-color">
-        <div>&nbsp;</div>
-        <div class="titl-bold title-margin1" style="margin: 2vh 8vw;">服务评价</div>
-        <div class="title-margin1" style="height: 270px;margin: 0 8vw;">
-            <textarea style="background-color: #F2F2F2;color: #444444;padding-left: 15px;padding-top: 5px;" class="comment" placeholder="写下您的评价，我们将第一时间为你反馈~"></textarea>
-            <div style="border-radius:5px;overflow:hidden;display: flex;" class="evaluation-botton">
-                <div style="width: 42vw; border-right: 2px solid white;" ms-click="alert"><span style="position: relative;top: 2px;">提交</span></div>
-                <div style="width: 42vw;" onclick="javascript:location.href='../index.html';"><span style="position: relative;top: 2px;">以后再评</span></div>
+    </section>
+
+
+    <section style="margin-top: 8px;padding-top: 8px;">
+        <div class="bs-text-bolder title-margin1">服务评价</div>
+        <div class="title-margin1" style="margin: 0 8vw;">
+            <textarea style="background-color: #F2F2F2;color: #444;padding-left: 15px;padding-top: 5px;" class="comment" placeholder="写下您的评价，我们将第一时间为你反馈~"></textarea>
+            <div style="display: flex;justify-content: space-between;">
+                <div class="evaluation-botton" ms-click="alert">
+                    <span>提交</span>
+                </div>
+                <div class="evaluation-botton" style="background-color: #999;" onclick="javascript:location.href='../index.html';">
+                    <span>以后再评</span>
+                </div>
             </div>
         </div>
-    </div>
+    </section>
+
     <div ms-if="isSend" style="padding: 20px;background-color: #fff;">
         <div class="mask-fullscreen bs-text-white" style="position: fixed; z-index: 11;">
             <img src="../img/icon/arrow-top-right.svg" style="width: 30px;">
