--- a/js/pages/index/index.html
+++ b/js/pages/index/index.html
@@ -138,34 +138,6 @@
     background-color: rgba(0, 0, 0, 0.3);
 }
 
-.footer-nav {
-    position: fixed;
-    display: flex;
-    justify-content: space-around;
-    height: 56px;
-    width: 100vw;
-    bottom: 0;
-    z-index: 10;
-    border-top: 1px solid #eee;
-    background-color: white;
-}
-
-.footer-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.footer-content img {
-    height: 30px;
-    width: 30px;
-}
-
-.footer-content div {
-    font-size: 8px;
-}
-
 .swiper-container {
     height: 31px;
 }
@@ -318,22 +290,5 @@
     </div>
     <div style="height: 55px;">
     </div>
-    <div class="footer-nav">
-        <div class="footer-content" ms-on-tap="goIndex">
-            <img src="/img/icon/icon-home-select.svg" class="">
-            <div class="">主页</div>
-        </div>
-        <div class="footer-content" ms-on-tap="goRoom">
-            <img src="/img/icon/icon-ruzhu.svg" class="">
-            <div class="">入住</div>
-        </div>
-        <div class="footer-content" ms-on-tap="goOrder">
-            <img src="/img/icon/icon-dingdan.svg" class="">
-            <div class="">订单</div>
-        </div>
-        <div class="footer-content" ms-on-tap="goMore">
-            <img src="/img/icon/icon-more.svg" class="">
-            <div class="">更多</div>
-        </div>
-    </div>
 </div>
+<!-- footer -->
