--- a/js/pages/checkin/inroom.html
+++ b/js/pages/checkin/inroom.html
@@ -169,33 +169,6 @@ div .mui-popup-buttons .mui-popup-button {
     color: #999;
 }
 
-.footer-nav {
-    position: fixed;
-    display: flex;
-    justify-content: space-around;
-    height: 56px;
-    width: 100vw;
-    bottom: 0;
-    z-index: 10;
-    background-color: white;
-}
-
-.footer-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.footer-content img {
-    height: 30px;
-    width: 30px;
-}
-
-.footer-content div {
-    font-size: 8px;
-}
-
 .header-status {
     display: flex;
     justify-content: flex-start;
@@ -397,22 +370,5 @@ div .mui-popup-buttons .mui-popup-button {
         </div>
     </div>
     <div style="height: 55px;"></div>
-    <div class="footer-nav">
-        <div class="footer-content" ms-on-tap="goIndex">
-            <img src="/img/icon/icon-home.svg" class="">
-            <div class="">主页</div>
-        </div>
-        <div class="footer-content">
-            <img src="/img/icon/icon-ruzhu-select.svg" class="">
-            <div class="">入住</div>
-        </div>
-        <div class="footer-content" ms-on-tap="goOrder">
-            <img src="/img/icon/icon-dingdan.svg" class="">
-            <div class="">订单</div>
-        </div>
-        <div class="footer-content" ms-on-tap="goMore">
-            <img src="/img/icon/icon-more.svg" class="">
-            <div class="">more</div>
-        </div>
-    </div>
 </div>
+<!-- footer -->
