--- a/js/pages/service/orderList.html
+++ b/js/pages/service/orderList.html
@@ -60,33 +60,6 @@ section {
 .flex0 {
     font-size: 10px;
 }
-
-.footer-nav {
-    position: fixed;
-    display: flex;
-    justify-content: space-around;
-    height: 56px;
-    width: 100vw;
-    bottom: 0;
-    z-index: 10;
-    background-color: white;
-}
-
-.footer-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.footer-content img {
-    height: 30px;
-    width: 30px;
-}
-
-.footer-content div {
-    font-size: 8px;
-}
 </style>
 <section>
     <div class="row" ms-controller="serviceOrderList">
@@ -124,24 +97,6 @@ section {
         <div style="height: 22px;">
         </div>
     </div>
-    <div class="footer-nav">
-        <div class="footer-content" ms-on-tap="goIndex">
-            <img src="/img/icon/icon-home.svg" class="">
-            <div class="">主页</div>
-        </div>
-        <div class="footer-content">
-            <img src="/img/icon/icon-ruzhu-select.svg" class="">
-            <div class="">入住</div>
-        </div>
-        <div class="footer-content" ms-on-tap="goOrder">
-            <img src="/img/icon/icon-dingdan.svg" class="">
-            <div class="">订单</div>
-        </div>
-        <div class="footer-content" ms-on-tap="goMore">
-            <img src="/img/icon/icon-more.svg" class="">
-            <div class="">more</div>
-        </div>
-    </div>
     <div style="padding: 20px;background-color: #fff;height: 100vh;">
         <div class="mask-fullscreen bs-text-white" ms-if="isSend" style="position: fixed; z-index: 11;">
             <img src="../img/icon/arrow-top-right.svg" style="width: 30px;">
@@ -157,6 +112,7 @@ section {
         </div>
     </div>
 </div>
+<!-- footer -->
 <!-- <script>
 mui.init({
     pullRefresh: {
