--- a/js/pages/user/more.html
+++ b/js/pages/user/more.html
@@ -9,33 +9,6 @@
     margin-bottom: 12px;
 }
 
-.footer-nav {
-    position: fixed;
-    display: flex;
-    justify-content: space-around;
-    height: 56px;
-    width: 100vw;
-    bottom: 0;
-    z-index: 10;
-    background-color: white;
-}
-
-.footer-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.footer-content img {
-    height: 30px;
-    width: 30px;
-}
-
-.footer-content div {
-    font-size: 8px;
-}
-
 .icon {
     height: 15px;
     width: 15px;
@@ -66,7 +39,7 @@
             <img src="../img/icon/right-arrow.svg" class="icon" alt="">
         </div>
     </div>
-    <div class="footer-nav">
+    <!-- <div class="footer-nav">
         <div class="footer-content" ms-on-tap="goIndex">
             <img src="/img/icon/icon-home.svg" class="">
             <div class="">主页</div>
@@ -83,5 +56,7 @@
             <img src="/img/icon/icon-more-select.svg" class="">
             <div class="">更多</div>
         </div>
-    </div>
+    </div> -->
 </div>
+<!-- footer -->
+
