--- a/js/pages/checkout/checkOut.html
+++ b/js/pages/checkout/checkOut.html
@@ -45,32 +45,6 @@ section {
     border-radius:5px;
 }
 
-.footer-nav {
-    position: fixed;
-    display: flex;
-    justify-content: space-around;
-    height: 56px;
-    width: 100vw;
-    bottom: 0;
-    z-index: 10;
-    background-color: white;
-}
-
-.footer-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.footer-content img {
-    height: 30px;
-    width: 30px;
-}
-
-.footer-content div {
-    font-size: 8px;
-}
 </style>
 <div ms-controller="checkOut" class="bs-text-444">
     
@@ -144,22 +118,5 @@ section {
         </div>
     </div>
     <div style="height: 67px;"></div>
-    <div class="footer-nav">
-        <div class="footer-content" ms-on-tap="goIndex">
-            <img src="/img/icon/icon-home.svg" class="">
-            <div class="">主页</div>
-        </div>
-        <div class="footer-content" ms-on-tap="goRoom">
-            <img src="/img/icon/icon-ruzhu.svg" class="">
-            <div class="">入住</div>
-        </div>
-        <div class="footer-content">
-            <img src="/img/icon/icon-dingdan-select.svg" class="">
-            <div class="">订单</div>
-        </div>
-        <div class="footer-content" ms-on-tap="goMore">
-            <img src="/img/icon/icon-more.svg" class="">
-            <div class="">more</div>
-        </div>
-    </div>
 </div>
+<!-- footer -->
