--- a/js/util/calendar.html
+++ b/js/util/calendar.html
@@ -58,10 +58,10 @@
     justify-content: space-around;
     font-size: 24px;
     margin-top: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 1vh;
 }
 .timeClock div {
-    margin: 15px 0;
+    margin: 2vh 0;
 }
 
 .hideClockArrow{
