--- a/js/pages/checkin/inroom.html
+++ b/js/pages/checkin/inroom.html
@@ -105,14 +105,6 @@
     width: 48px;
 }
 
-.img-movie:acitve {
-    background-image: url(../img/icon/movie-fdd942.svg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 48px;
-    width: 48px;
-}
-
 .device-sunshine {
     display: flex;
     justify-content: space-between;
@@ -292,7 +284,7 @@ div .mui-popup-buttons .mui-popup-button {
             设备控制
         </div>
         <!-- <div class="device-movie" onclick="javascript:location.href='../inroom/telecontroller.html';"> -->
-        <div class="device-movie">
+        <div class="device-movie" onclick="javascript:location.href='../inroom/telecontroller.html';">
             <div>影视</div>
             <div class="img-movie">
                 <!-- <img src="../img/icon/movie-444.svg" alt=""> -->
