--- a/js/pages/index/index.html
+++ b/js/pages/index/index.html
@@ -1,4 +1,84 @@
 <style>
+.city-img {
+    width: 56px;
+    height: 56px;
+    margin-left: 5px;
+    margin-bottom: 6px;
+    border-radius: 50%;
+}
+
+.city-list-item {
+    width: 60px;
+    height: auto;
+    text-align: center;
+    line-height: 130% !important;
+    display: flex;
+    flex-direction: column;
+}
+
+.city-list-item-txt {
+    font-size: 14px;
+    color: #444444;
+    margin: 0px;
+    padding: 0px;
+}
+
+.city-list-location {
+    width: 60px;
+    height: 60px;
+    border-radius: 30px;
+    background: #b3dfdb;
+    text-align: center;
+}
+
+.city-slide {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-left: 13px;
+}
+
+.distance {
+    float: right;
+    margin: 15px 0;
+    padding: 0 4px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.greeting {
+    width: 100%;
+    text-align: right;
+    margin-right: 5px;
+    line-height: 32px;
+}
+
+.hotel-room-amenity-text {
+    margin-left: 13px;
+}
+
+.hotelName {
+    position: relative;
+    width: 86vw;
+    text-align: left;
+    top: 152px;
+    font-size: 16px;
+}
+
+.hotelAddress {
+    color: #999;
+    white-space: nowrap;
+}
+
+.hotelImg {
+    display: flex;
+    justify-content: flex-start;
+    height: 24px;
+    width: 72px;
+    margin-bottom: 10px;
+    padding-top: 2px;
+}
+
 .index-top {
     /*background: url('/img/qietu-shouyebgr.png');*/
     background-image: -webkit-linear-gradient(45deg, #169488, #006457);
@@ -32,49 +112,6 @@
     border-radius: 34px !important;
 }
 
-.mui-search .mui-placeholder {
-    height: 50px !important;
-    font-size: 18px !important;
-    line-height: 50px;
-    color: #ffffff;
-}
-
-.mui-search {
-    margin-top: 12px !important;
-}
-
-.mui-icon {
-    color: white !important;
-}
-
-.city-list-item {
-    width: 60px;
-    height: auto;
-    text-align: center;
-    line-height: 130% !important;
-    display: flex;
-    flex-direction: column;
-}
-
-.city-list-item-txt {
-    font-size: 14px;
-    color: #444444;
-    margin: 0px;
-    padding: 0px;
-}
-
-.city-list-location {
-    width: 60px;
-    height: 60px;
-    border-radius: 30px;
-    background: #b3dfdb;
-    text-align: center;
-}
-
-.mui-active {
-    border-bottom: none !important;
-}
-
 .intro-title {
     margin-top: 8px;
     font-size: 16px;
@@ -89,6 +126,11 @@
 .intro-ul {
     padding: 0 !important;
     margin-bottom: 16px;
+}
+
+.intro-back1 {
+    height: 45vh;
+    width: 100vw;
 }
 
 .intro-item {
@@ -108,6 +150,35 @@
     color: #ffffff;
 }
 
+.more-recommend {
+    height: 40px;
+    width: 100%;
+    margin-top: 8px;
+    padding: 18px 0 0 10px;
+    margin: 0 auto;
+    font-size: 16px;
+    background-color: white;
+}
+
+.mui-search .mui-placeholder {
+    height: 50px !important;
+    font-size: 18px !important;
+    line-height: 50px;
+    color: #ffffff;
+}
+
+.mui-search {
+    margin-top: 12px !important;
+}
+
+.mui-icon {
+    color: white !important;
+}
+
+.mui-active {
+    border-bottom: none !important;
+}
+
 .mui-table-view:after,
 .mui-table-view:before {
     height: 0px !important;
@@ -116,47 +187,6 @@
 .nav-ico {
     width: 30px;
     height: 30px;
-}
-
-.search {
-    height: 50px;
-    margin: 0 8px 30px;
-    padding-top: 14px;
-    border-radius: 30px;
-}
-
-.intro-back1 {
-    height: 45vh;
-    width: 100vw;
-}
-
-.distance {
-    float: right;
-    margin: 15px 0;
-    padding: 0 4px;
-    color: white;
-    background-color: rgba(0, 0, 0, 0.3);
-}
-
-.swiper-container {
-    height: 31px;
-}
-
-.hotel-room-amenity-text {
-    margin-left: 13px;
-}
-
-.hotelName {
-    position: relative;
-    width: 86vw;
-    text-align: left; 
-    top: 152px;
-    font-size: 16px;
-}
-
-.hotelAddress {
-    color: #999;
-    white-space: nowrap;
 }
 
 .picture {
@@ -179,18 +209,35 @@
     margin-bottom: 1vw;
 }
 
+.search {
+    height: 50px;
+    margin: 0 8px 30px;
+    padding-top: 14px;
+    border-radius: 30px;
+}
+
+.swiper-container {
+    height: 31px;
+}
+
+.welcome {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+}
 </style>
 <div ms-controller="index2">
     <div class="index-top">
         <img src="/img/icon/logo.svg" class="index-top-logo">
         <img class="intro-back1" src="../img/index-background.png">
         <div class="index-top-div">
-            <div style="display: flex;justify-content: center;align-items: center;font-weight: bold;">
+            <div class="welcome">
                 <div style="width: 94px;">
                     <div class="swiper-container swiper">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide swiper-no-swiping" style="background-color: transparent;" ms-repeat="greetList" data-repeat-rendered="greetSwiper">
-                                <div class="bs-text-smaller bs-text-fdd942" style="line-height: 32px;width: 100%;text-align: right;margin-right: 5px;">
+                                <div class="bs-text-smaller bs-text-fdd942 greeting">
                                     {{el.name}}
                                 </div>
                             </div>
@@ -207,15 +254,15 @@
     <div class="swiper-slide-item" style="margin-bottom: 8px;">
         <div class="swiper-container swiper1 hotel-room-amenity bs-bg-white" style="height: 102px;padding-top: 10px;">
             <div class="swiper-wrapper" style="display: flex; padding-left: 0;">
-                <div class="swiper-slide hotel-room-amenity-item" ms-repeat-cl="data" data-repeat-rendered="swiper1Render" style="display: flex;flex-direction: column;justify-content: flex-start;margin-left: 13px;">
-                    <img ms-attr-src="cl.ico" ms-attr-alt="cl.name" style="width: 56px;height: 56px;margin-left: 5px;margin-bottom: 6px;" />
+                <div class="swiper-slide hotel-room-amenity-item city-slide" ms-repeat-cl="data" data-repeat-rendered="swiper1Render">
+                    <img class="city-img" ms-attr-src="urlAPINet + cl.imgUrl" ms-attr-alt="cl.name" style="" />
                     <label class="bs-text-x-smaller hotel-room-amenity-text bs-text-444">{{cl.name}}</label>
                 </div>
                 <div class="swiper-scrollbar"></div>
             </div>
         </div>
     </div>
-    <div class="bs-text-444" style="height: 40px;width: 100%;margin-top: 8px;padding: 18px 0 0 10px;margin: 0 auto;font-size: 16px;background-color: white;">
+    <div class="bs-text-444 more-recommend">
         更多推荐
         <div class="bs-text-smaller" style="position: relative;float: right;right: 8px;color: #999;">
             更多
@@ -227,7 +274,7 @@
                 <div ms-css-background-image="linear-gradient(rgba(0, 0, 0, .2), rgba(0, 0, 0, .2)), url({{urlAPINet + el.coverUrl}})" style="height: 143px;background-size: cover;width: inherit;position: relative;top: -32px;">
                     <span class="distance bs-text-x-smaller">{{round(el.distance/1000)}}km</span>
                     <div style="display: flex;width: 100%;position: absolute;bottom: 5px;">
-                        <div class="bs-text-white bs-bg-black price" style="display: flex;justify-content: flex-start; height: 24px;width: 72px;margin-bottom: 10px;padding-top: 2px;">
+                        <div class="bs-text-white bs-bg-black hotelImg">
                             <div class="bs-text-normal" style="left: -13px;font-weight: bold;">￥150</div>
                             <div class="bs-text-smaller bs-text-lighter" style="font-weight: lighter;">/晚起</div>
                         </div>
@@ -244,32 +291,6 @@
     <div class="intro-title">
         <span>了解更多</span>
     </div>
-    <!-- <ul class="mui-table-view mui-grid-view intro-ul">
-        <li class="mui-table-view-cell mui-media mui-col-xs-6 intro-item" style="padding-right: 1px !important;">
-            <a href="###">
-                <img class="mui-media-object" src="/img/index-aboutUs.png">
-                <span class="intro-item-spn">关于我们</span>
-            </a>
-        </li>
-        <li class="mui-table-view-cell mui-media mui-col-xs-6 intro-item" style="padding-left: 1px !important;">
-            <a href="###">
-                <img class="mui-media-object" src="/img/index-partner.png">
-                <span class="intro-item-spn">城市合伙人</span>
-            </a>
-        </li>
-        <li class="mui-table-view-cell mui-media mui-col-xs-6 intro-item" style="padding-right: 1px !important;">
-            <a href="###">
-                <img class="mui-media-object" src="/img/index-cooperation.png">
-                <span class="intro-item-spn">酒店合作</span>
-            </a>
-        </li>
-        <li class="mui-table-view-cell mui-media mui-col-xs-6 intro-item" style="padding-left: 1px !important;">
-            <a href="###">
-                <img class="mui-media-object" src="/img/index-invited.png">
-                <span class="intro-item-spn">邀您参与</span>
-            </a>
-        </li>
-    </ul> -->
     <div class="picture bs-bg-white">
         <div class="picture-unit" style="background-image: linear-gradient(rgba(0, 0, 0, .2), rgba(0, 0, 0, .2)), url(../img/index-aboutUs.png);">
             <div class="bs-text-white bs-text-larger">关于我们</div>
