首页怼接口

--- a/js/pages/manage/login.html
+++ b/js/pages/manage/login.html
@@ -40,7 +40,7 @@
 		submit: function() {
 			vmLogin.isDisabled = true;
         	ajaxJsonp({
-	            url: urlAPI + '/usr/user/loginPwd',
+	            url: urlAPI + '/web/usr/user/loginPwd',
 	            data: {
 	                username: vmLogin.mobile,
 	                password: vmLogin.pwd
