--- a/js/pages/checkin/illumination.html
+++ b/js/pages/checkin/illumination.html
@@ -136,15 +136,15 @@
         </div>
         <div class="content">
             <div class="content-unit">
-                <a class="kaishi" href="###" title=""></a>
+                <a class="kaishi" href="###" title="" ms-on-tap="start"></a>
                 <div class="">开始</div>
             </div>
             <div class="content-unit">
-                <a class="pause" href="###" title=""></a>
+                <a class="pause" href="###" title="" ms-on-tap="pause"></a>
                 <div class="">暂停</div>
             </div>
             <div class="content-unit">
-                <a class="close" href="###" title=""></a>
+                <a class="close" href="###" title="" ms-on-tap="close"></a>
                 <div class="">关闭</div>
             </div>
         </div>
