--- a/js/pages/checkin/opendoor.html
+++ b/js/pages/checkin/opendoor.html
@@ -108,7 +108,8 @@
             labelTip: '',
             successLabelTip: ''
         }, function () {
-            location.href = 'inroom.html';
+            //vmOpenDoor.open();
+            //location.href = 'inroom.html';
         }, function () {
             var info = "index:" + slider.index + "， max:" + slider.max + ",lableIndex:" + slider.lableIndex + ",value:" + document.querySelector(".slideunlock-lockable").value + " date:" + new Date().getUTCDate();
             console.log(info);
