首页及城市页的地图逻辑完成

--- a/js/pages/city/city.html
+++ b/js/pages/city/city.html
@@ -42,6 +42,7 @@
 <div ms-controller="city" style="height: 100vh;">
     <!-- 地图 -->
     <div id="container" style="z-index:1;height: 100%;" ms-visible="isShowMap"></div>
+    <div class="mapCenter" ms-visible="isShowMap"></div>    
     <!-- 地图模式的酒店详情轮播 -->
     <div class="swiper-container swiper1" style="height: 200px; z-index: 10;position: absolute;bottom: 0;" ms-visible="isShowHotelDetail">
         <div class="swiper-wrapper" style="padding-left: 15px;background-color: rgba(0,0,0,0);">
