--- a/js/pages/index/searchLocation.html
+++ b/js/pages/index/searchLocation.html
@@ -4,7 +4,19 @@
     background-color: #fff;
     padding: 10px 12.5px 10px 12.5px;
 }
-
+.canselBtn {
+    background-image: url('../img/icon/close_black.svg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 24px;
+    position: absolute;
+    height: 24px;
+    right: 10px;
+    top: 5px;
+    background-color: #eee;
+    border-radius: 50%;
+    border: 5px solid #eee;
+}
 .hot-hotel-recommend {
     border: 1px solid #eee;
     border-radius: 17.5px;
@@ -32,110 +44,80 @@
     background-color: #eee;
 }
 
-/*input[type="search"] {
-     height: 40px;
-     font-weight: 300; 
-     border-radius: 0; 
-     margin-bottom: 0; 
-     padding: 14px 0 14px 49px; 
-     text-align: left;
+.tipList {
+    height: 70px;
+    text-align: left;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #ccc;
+}
+.tipList:active {
+    background-color: #eee;
 }
 
-hr {
-    margin: 0;
+.arrowRight {
+    background-image: url(../img/icon/right-arrow.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 20px;
+    height: 20px;
 }
-
-.search-location {
-    color: #000;
-    background-color: #fff;
-    padding: 30px 0 20px 0;
-}
-
-#pop-text {
-    height: 85vh;
-}
-
-.amap-sug-result {
-    z-index: 10000;
-    border: none;
-    max-width: 80%;
-    height: 55vh;
-    overflow: hidden;
-}
-
-.amap-sug-result .auto-item {
-    font-size: 16px;
-}*/
 </style>
-<!-- <article ms-controller="search">
-    <br>
-    <section class="search-panel" style="height: 70vh;">
-        <div style="height: 40px;">
-            <span class="mui-icon mui-icon-search" style="position: absolute; margin: 8.5px 12.5px;"></span>
-            <input id="tipinput" type="search" ms-attr-placeholder="'搜索' + city + '的街道、地标'">
-        </div>
-        <section class="search-location" ms-click="getCurrentPosition">
-            <span class="mui-icon mui-icon-location"></span>&nbsp;
-            <span class="bs-text-small bs-text-gray" style="display: inline-block;">定位当前位置</span>
-            <div class="bs-text-small bs-text-black" style="margin: 15px 0 0 32.5px;">
-                {{currentLocation}}
-            </div>
-        </section>
-        <hr>
-        <section class="search-panel" style="padding: 20px 0 0;">
-            <span class="bs-text-small bs-text-gray">酒店推荐</span>
-            <div class="bs-text-small bs-text-black" style="margin: 15px 0 0 32.5px;">
-                上海迪斯尼店
-            </div>
-            <div class="bs-text-small bs-text-black" style="margin: 12px 0 0 32.5px;">惠南店</div>
-        </section>
-    </section>
-</article> -->
+
 <article ms-controller="search" style="height: 100vh;width: 100vw;">
-    <section style="width: 100%;color: #000;background-color: #fff;">
-        <div class="searchlocation-searchbox">
-            <div ms-on-tap="closePop" style="height: 23px;">
-                <img src="../img/icon/icon-back-444.svg">
-            </div>
-            <div style="height: 34px;width: 58vw;">
-                <span class="mui-icon" style="position: absolute; margin: 5px 12.5px;">
-                    <img src="../img/icon/search-444.svg">
-                </span>
-                <input id="tipinput" type="search" style="text-align: left;border-radius: 17px; font-size: 12px;background-color: #fff;padding-left: 50px;" placeholder="搜索地标或街道" autofocus="autofocus">
-            </div>
-            <div onClick="javascript:location.href='../city.html';" style="font-size: 14px;">
-                搜索
-            </div>
+    <div class="searchlocation-searchbox">
+        <div ms-on-tap="closePop" style="height: 23px;">
+            <img src="../img/icon/icon-back-444.svg">
         </div>
-        <section style="display: flex;justify-content: baseline;align-items: center;padding: 20px 24px;">
-            <img src="../img/icon/icon-geo.svg" style="width: 16px;height: 16px;">
-            <div style="font-size: 14px;padding-left: 16px;">定位当前位置</div>
+        <div style="height: 34px;width: 58vw;position: relative;">
+            <span class="mui-icon" style="position: absolute; margin: 5px 12.5px;">
+                <img src="../img/icon/search-444.svg">
+            </span>
+            <input id="tipinput" type="search" style="text-align: left;border-radius: 17px; font-size: 12px;background-color: #fff;padding-left: 50px;" ms-attr-placeholder="'搜索' + city.name + '的街道、地标'" autofocus="autofocus" ms-duplex="search">
+            <div class="canselBtn" ms-if="search" ms-on-tap="clear"></div>
+        </div>
+        <div style="width: 30px;"></div>
+    </div>
+    
+    <section ms-if="isShowTipList" style="margin: 0 auto;width: 95%;">
+        <div ms-repeat="tipList" class="tipList" ms-on-tap="selectLocation(el.name, el.location.lng, el.location.lat, false)">
+            <div style="background:url('../img/icon/position.png') no-repeat center center;height: 20px;width: 20px;background-size: cover;"></div>
+            <div style="flex-grow: 1;padding-left: 20px;">
+                <div class="bs-text-large">{{el.name}}</div>
+                <div class="bs-text-small bs-text-gray">{{el.district + ' ' + el.address}}</div>
+            </div>
+            <div class="arrowRight"></div>
+        </div>
+        <div ms-if="tipList.length==0" class="tipList">对不起，暂无该地址数据</div>
+    </section>
+
+    <div ms-if="!isShowTipList">
+        <section style="display: flex;justify-content: baseline;align-items: center;padding: 20px 24px;font-size: 14px;">
+            <div>当前位置：</div>
+            <div>{{position}}</div>
         </section>
         <section style="text-align: left;">
-            <div class="bs-text-small bs-text-gray" style="font-size: 12px;margin-bottom: 24px;padding-left: 24px;">热门酒店推荐</div>
+            <div class="bs-text-small bs-text-gray" style="font-size: 12px;margin-bottom: 24px;padding-left: 24px;">开放城市</div>
             <div style="display: flex;flex-wrap: wrap;justify-content: flex-start;padding: 0 24px;">
-                <div class="bs-text-small bs-text-black hot-hotel-recommend">上海迪斯尼店</div>
-                <div class="bs-text-small bs-text-black hot-hotel-recommend">惠南店</div>
-                <div class="bs-text-small bs-text-black hot-hotel-recommend">野生动物园店</div>
-                <div class="bs-text-small bs-text-black hot-hotel-recommend">陆家嘴店</div>
-                <div class="bs-text-small bs-text-black hot-hotel-recommend">浦东机场店</div>
-                <div class="bs-text-small bs-text-black hot-hotel-recommend">虹桥机场店</div>
-                <div class="bs-text-small bs-text-black hot-hotel-recommend">虹桥火车站店</div>
-                <div class="bs-text-small bs-text-black hot-hotel-recommend">上海火车站店</div>
+                <div class="bs-text-small bs-text-black hot-hotel-recommend" ms-repeat="openCityList" ms-on-tap="selectSearchCity($index, el.name, el.cid)">
+                    <img src="../img/icon/icon-geo.svg" style="width: 16px;height: 16px;position: relative;top: 3px;" ms-if="searchCityIndex==$index">
+                    {{el.name}}
+                </div>
             </div>
         </section>
-        <section style="padding: 0px 24px;text-align: left;margin-top: 8px;">
+        <section style="padding: 0px 24px;text-align: left;margin-top: 8px;" ms-if="searchHistoryList.length>0">
             <div class="bs-text-small bs-text-gray" style="font-size: 12px;margin-bottom: 24px;">历史搜索记录</div>
             <div>
-                <div class="bs-text-small bs-text-balck searchlocation-searchhistory">
-                    <div class="bs-text-normal">上海迪斯尼店</div>
-                    <div style="height: 24px;"><img src="../img/icon/close_black.svg" style="width: 14px;height: 14px;"></div>
-                </div>
-                <div class="bs-text-small bs-text-balck searchlocation-searchhistory">
-                    <div class="bs-text-normal">上海迪斯尼店</div>
-                    <div style="height: 24px;"><img src="../img/icon/close_black.svg" style="width: 14px;height: 14px;"></div>
+                <div class="bs-text-small bs-text-balck searchlocation-searchhistory" ms-repeat="searchHistoryList">
+                    <div class="bs-text-normal" style="flex-grow: 1;margin-right: 30px;" ms-on-tap="selectLocation(el.name, el.lng, el.lat, true)">
+                        {{el.name}}
+                    </div>
+                    <div style="height: 24px;" ms-on-tap="deleteHistory($index)">
+                        <img src="../img/icon/close_black.svg" style="width: 14px;height: 14px;">
+                    </div>
                 </div>
             </div>
         </section>
-    </section>
+    </div>
 </article>
