--- a/js/pages/loading/loading.html
+++ b/js/pages/loading/loading.html
@@ -77,7 +77,7 @@
     <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
     <script src="../js/lib/jquery.min.js"></script>
     <script src="../js/lib/mui.min.js"></script>
-    <script src="../js/lib/avalon.mobile.shim.min.js"></script>
+    <script src="../js/lib/avalon.mobile.js"></script>
     <script src="../js/lib/os.js" ></script>
     <script src="../js/domainName.js"></script>
     <script src="../js/api.js"></script>
