首页附近按钮的bug修复

--- a/js/pages/index/index.html
+++ b/js/pages/index/index.html
@@ -30,7 +30,7 @@
     <div class="swiper-slide-item" style="margin-bottom: 8px;">
         <div class="swiper-container swiper1 hotel-room-amenity bs-bg-white" style="height: 102px;padding-top: 10px;">
             <div class="swiper-wrapper" style="display: flex; padding-left: 0;">
-                <div class="swiper-slide hotel-room-amenity-item city-slide" ms-on-tap="goCity(0)">
+                <div class="swiper-slide hotel-room-amenity-item city-slide" ms-on-tap="goCity('', 0)">
                     <img class="city-img" src="../img/icon/location.svg" alt="附近"/>
                     <label class="bs-text-x-smaller hotel-room-amenity-text bs-text-444">附近</label>
                 </div>
